samples/_failures_safe/1761356713_00b52b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66d96b42.c: In function ‘main’:
./samples/SAFE/__tmp_66d96b42.c:164:12: error: missing terminating " character
  164 |     printf("Compressed data (
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_66d96b42.c:164:5: error: expected expression at end of input
  164 |     printf("Compressed data (
      |     ^~~~~~
./samples/SAFE/__tmp_66d96b42.c:164:5: error: expected declaration or statement at end of input
